--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>kornicameister.github.io</title>
-  <base href="/">
+  <base href="/km">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <app-root>Loading...</app-root>
+  <km-root>Loading...</km-root>
 </body>
 
 </html>
